validated the answer and added corresponding comment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,7 @@
   .question{
    
     /* background-color:transparent; */
-    color: white;
+    color:rgb(197, 202, 215);
     font-size:30px;
   }
 
