--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,31 +1,32 @@
-:root{
-    --color:rgb(233, 191, 52);
+:root {
+    --color: rgb(233, 191, 52);
 }
+
 * {
     box-sizing: border-box;
-  }
+}
 
-  body {
+body {
     font-family: Arial;
     margin: 0;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     justify-content: flex-start;
-    background: linear-gradient(0deg, rgba(237,245,249,1) 0%,  rgba(19,41,61,1)63%);
+    background: linear-gradient(0deg, rgba(237, 245, 249, 1) 0%, rgba(19, 41, 61, 1)63%);
     /* background: linear-gradient(0deg, rgba(237,245,249,1) 63%, rgba(19,41,61,1) 0%); */
 
-  }
+}
 
-    p{
+p {
     font-size: 20px;
     width: 800px;
     margin-left: 270px;
     text-align: center;
-  }
+}
 
-  button {
-    background: radial-gradient(circle, rgba(240,230,140,1) 0%, rgba(187,96,33,0.9542191876750701) 100%);
+button {
+    background: radial-gradient(circle, rgba(240, 230, 140, 1) 0%, rgba(187, 96, 33, 0.9542191876750701) 100%);
     border-radius: 8px;
     color: #13293d;
     cursor: pointer;
@@ -39,13 +40,14 @@
     transition-property: background-color;
     transition-timing-function: linear;
     margin-top: 0.6em;
-  }
+}
 
-  button:hover{
+button:hover {
     background: var(--color);
-  }
-  .button-choices {
-    background: radial-gradient(circle, rgba(240,230,140,1) 0%, rgba(187,96,33,0.9542191876750701) 100%);
+}
+
+.button-choices {
+    background: radial-gradient(circle, rgba(240, 230, 140, 1) 0%, rgba(187, 96, 33, 0.9542191876750701) 100%);
     border-radius: 8px;
     color: #13293d;
     cursor: pointer;
@@ -60,54 +62,56 @@
     transition-property: background-color;
     transition-timing-function: linear;
     margin-top: 0.6em;
-  }
-  /* .button-choices:hover {
+}
+
+/* .button-choices:hover {
     background: radial-gradient(circle, rgba(240,230,140,1) 0%, rgba(187,96,33,0.9542191876750701) 100%);
   } */
-  header {
+header {
     padding: 40px;
     text-align: center;
     /* background: #2f3f4e; */
-    color: #fff;
-    border-bottom:30px #879274;
-  }
- 
-  main {
+    color: rgb(197, 202, 215);
+    border-bottom: 30px #879274;
+}
+
+main {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-  }
-  
-  #view-high-score{
-    color: var(--color);  
+}
+
+#view-high-score {
+    color: var(--color);
     float: left;
     text-decoration: none;
     font-size: 18px;
-  }
-  
-  .timer-count{
+}
+
+.timer-count {
     float: right;
     color: var(--color);
     font-size: 18px;
-  }
-  .quiz-heading
-  {
+}
+
+.quiz-heading {
     margin-top: 150px;
-  }
-  .card
-  {position: relative;
+}
+
+.card {
+    position: relative;
     display: block;
     margin-left: 300px;
-    /* padding: 5px; */
-     top: -210px;
-    /* width: 80vw; */
-  }
-  ul {
+    top: -210px;
+}
+
+ul {
     list-style-type: none;
     padding: 0;
     /* background-color: white; */
-  }
-  .choices {
+}
+
+.choices {
     height: 50px;
     margin-top: 5px;
     margin-bottom: 5px;
@@ -116,23 +120,73 @@
     color: white;
     /* font-size: 1.5em; */
     line-height: 1.5;
-  }
-  .question{
-   
+}
+
+.question {
+
     /* background-color:transparent; */
-    color:rgb(197, 202, 215);
-    font-size:30px;
+    color: rgb(197, 202, 215);
+    font-size: 30px;
+}
+
+.div-initials {
+    color: rgb(197, 202, 215);
+    font-size: 25px;
+}
+#input-initials {
+    background-color: whitesmoke;
+    border-radius: 3px;
+    border-width: 1px;
+    color: #5f6368;
+    font-size: 1.1em;
+    height: 35px;
+    line-height: 20px;
+    margin: 0;
+    /* margin-top: 10px; */
+    width: 300px;
+    padding: 8px 8px 8px 8px;
+    transition-delay: 0s, 0s;
+    transition-duration: 0.2s, 0.2s;
+    transition-property: background-color, color;
+    transition-timing-function: ease, ease;
+    vertical-align: middle;
+    /* width: 100%; */
   }
 
-  @media screen and (max-width: 1183px) {
+.final-message {
+    /* color: whitesmoke; */
+    font-size: 30px;
+}
+
+.final-score {
+    /* color: whitesmoke; */
+    text-align: left;
+    margin-left: 0px;
+}
+#button-submit{
+    background: radial-gradient(circle, rgba(240, 230, 140, 1) 0%, rgba(187, 96, 33, 0.9542191876750701) 100%);
+    border-radius: 8px;
+    color: #13293d;
+    cursor: pointer;
+    font-size: 25px;
+    letter-spacing: 0.21px;
+    line-height: 5px;
+     width: 120px;
+    padding: 13px 15px;
+    /* padding-left: 10px; */
+    text-align: left;
+    transition-duration: 0.15s;
+    transition-property: background-color;
+    transition-timing-function: linear;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+@media screen and (max-width: 1183px) {
     main {
-      flex-direction: column;
+        flex-direction: column;
     }
 
-    
-  }
-  
-  @media screen and (max-width: 504px) {
-   
-   
-  }  
+
+}
+
+@media screen and (max-width: 504px) {}
