--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 :root {
     --color: rgb(233, 191, 52);
+    --button_color: radial-gradient(circle, rgba(240, 230, 140, 1) 0%, rgba(198, 147, 28, 0.954) 100%);
 }
 
 * {
@@ -26,7 +27,7 @@ p {
 }
 
 button {
-    background: radial-gradient(circle, rgba(240, 230, 140, 1) 0%, rgba(187, 96, 33, 0.9542191876750701) 100%);
+    background: var(--button_color);
     border-radius: 8px;
     color: #13293d;
     cursor: pointer;
@@ -47,14 +48,14 @@ button:hover {
 }
 
 .button-choices {
-    background: radial-gradient(circle, rgba(240, 230, 140, 1) 0%, rgba(187, 96, 33, 0.9542191876750701) 100%);
+    background:  var(--button_color);
     border-radius: 8px;
     color: #13293d;
     cursor: pointer;
-    font-size: 1.5em;
+    font-size: 1.2em;
     letter-spacing: 0.21px;
-    /* line-height: 16px; */
-    max-width: 100%;
+    line-height: 10px;
+    width:230px;
     padding: 13px 15px;
     padding-left: 10px;
     text-align: left;
@@ -108,7 +109,6 @@ main {
 ul {
     list-style-type: none;
     padding: 0;
-    /* background-color: white; */
 }
 
 .choices {
@@ -116,15 +116,11 @@ ul {
     margin-top: 5px;
     margin-bottom: 5px;
     padding: 5px;
-    /* background-color:  #001b44; */
     color: white;
-    /* font-size: 1.5em; */
     line-height: 1.5;
 }
 
 .question {
-
-    /* background-color:transparent; */
     color: rgb(197, 202, 215);
     font-size: 30px;
 }
@@ -150,33 +146,29 @@ ul {
     transition-property: background-color, color;
     transition-timing-function: ease, ease;
     vertical-align: middle;
-    /* width: 100%; */
   }
 
 .final-message {
-    /* color: whitesmoke; */
     font-size: 30px;
 }
 
 .final-score {
-    /* color: whitesmoke; */
     text-align: left;
     margin-left: 0px;
 }
-#button-submit{
-    background: radial-gradient(circle, rgba(240, 230, 140, 1) 0%, rgba(187, 96, 33, 0.9542191876750701) 100%);
+.button-submit{
+    background: var(--button_color);
     border-radius: 8px;
     color: #13293d;
     cursor: pointer;
     font-size: 20px;
     letter-spacing: 0.21px;
     line-height: 5px;
-     width: 120px;
+    width: 120px;
     padding: 13px 15px;
-    /* padding-left: 10px; */
     text-align: center;
     transition-duration: 0.15s;
-    transition-property: background-color;
+    transition-property: background-color,color;
     transition-timing-function: linear;
     margin-top: 10px;
     margin-left: 10px;
@@ -185,28 +177,12 @@ ul {
     margin-left: 270px;
     margin-top: 100px;
 }
- /* #button-clear #button-submit{
-    width: 300px; */
-    /* background: radial-gradient(circle, rgba(240, 230, 140, 1) 0%, rgba(187, 96, 33, 0.9542191876750701) 100%);
-    border-radius: 8px;
-    color: #13293d;
-    cursor: pointer;
-    font-size: 20px;
-    letter-spacing: 0.21px;
-    line-height: 5px;
-     
-    padding: 13px 15px;
-  
-    text-align: center;
-    transition-duration: 0.15s;
-    transition-property: background-color;
-    transition-timing-function: linear;
-    margin-top: 10px;
-    margin-left: 10px; */
-/* } */
-#button-submi #clear {
-    width: 300px;
-} 
+ 
+.button-highscore{
+    
+    line-height:5px;
+    font-size: 1.2em;
+}  
 @media screen and (max-width: 1183px) {
     main {
         flex-direction: column;
