--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 p {
-    font-size: 20px;
+    font-size: 25px;
     width: 800px;
     margin-left: 270px;
     text-align: center;
@@ -48,14 +48,14 @@ button:hover {
 }
 
 .button-choices {
-    background:  var(--button_color);
+    background: var(--button_color);
     border-radius: 8px;
     color: #13293d;
     cursor: pointer;
     font-size: 1.2em;
     letter-spacing: 0.21px;
     line-height: 10px;
-    width:230px;
+    width: 230px;
     padding: 13px 15px;
     padding-left: 10px;
     text-align: left;
@@ -73,7 +73,8 @@ header {
     text-align: center;
     /* background: #2f3f4e; */
     color: rgb(197, 202, 215);
-    border-bottom: 30px #879274;
+    /* border-bottom: 30px #879274; */
+    /* border-bottom: rgb(97, 105, 124) */
 }
 
 main {
@@ -106,6 +107,23 @@ main {
     top: -210px;
 }
 
+.div-score {
+    position: relative;
+    display: block;
+    margin-left: 30px;
+    top: 55px;
+}
+
+/* #question-list {
+    position: relative;
+    top: -100px;
+} */
+
+.rel-position {
+    position: relative;
+    top: -100px;
+}
+
 ul {
     list-style-type: none;
     padding: 0;
@@ -127,15 +145,24 @@ ul {
 }
 
 .div-initials {
+    /* position: relative;
+    top: -40px; */
     color: rgb(197, 202, 215);
     font-size: 25px;
+    margin-bottom: 0px;
 }
-#input-initials { 
+.highscore-position {
+    position: relative;
+    top: -40px;
+    font-size: 30px;
+}
+#input-initials {
+   
     background-color: whitesmoke;
     border-radius: 3px;
     border-width: 1px;
     color: #5f6368;
-    font-size: 1.1em;
+    font-size: .8em;
     height: 35px;
     line-height: 20px;
     margin: 0;
@@ -147,17 +174,19 @@ ul {
     transition-property: background-color, color;
     transition-timing-function: ease, ease;
     vertical-align: middle;
-  }
+}
 
 .final-message {
     font-size: 30px;
+    margin-bottom: 18px;
 }
 
 .final-score {
     text-align: left;
-    margin-left: 0px;
+    margin: 0px 0px 10px 0px;
 }
-.button-submit{
+
+.button-submit {
     background: var(--button_color);
     border-radius: 8px;
     color: #13293d;
@@ -169,21 +198,30 @@ ul {
     padding: 13px 15px;
     text-align: center;
     transition-duration: 0.15s;
-    transition-property: background-color,color;
+    transition-property: background-color, color;
     transition-timing-function: linear;
     margin-top: 10px;
     margin-left: 10px;
 }
-.div-highscores{
+
+.div-highscores {
     margin-left: 270px;
     margin-top: 100px;
 }
- 
-.button-highscore{
-    
-    line-height:5px;
+
+#highscores {
+    position: relative;
+    top: -20px;
+    margin-bottom: 0px;
+    margin-top: 0px;
+}
+
+.button-highscore {
+    margin-top: 0px;
+    line-height: 5px;
     font-size: 1.2em;
-}  
+}
+
 @media screen and (max-width: 1183px) {
     main {
         flex-direction: column;
