--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,10 @@
+/* ###############    VARIABLE DECLARATION    ############### */
 :root {
     --color: rgb(233, 191, 52);
     --button_color: radial-gradient(circle, rgba(240, 230, 140, 1) 0%, rgba(198, 147, 28, 0.954) 100%);
 }
 
+/* ###############    GENERAL STYLES    ############### */
 * {
     box-sizing: border-box;
 }
@@ -20,8 +22,15 @@ body {
 p {
     font-size: 25px;
     width: 800px;
-    margin-left: 270px;
+    margin-left: 280px;
+  margin-bottom: 10px;
+    /* margin: 0px 280px 0px 280px; */
     text-align: center;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
 }
 
 button {
@@ -44,30 +53,44 @@ button:hover {
     background: var(--color);
 }
 
-.button-choices {
-    background: var(--button_color);
-    border-radius: 8px;
-    color: #13293d;
-    cursor: pointer;
-    font-size: 1.2em;
-    letter-spacing: 0.21px;
-    line-height: 10px;
-    width: 230px;
-    padding: 13px 15px;
-    padding-left: 10px;
-    text-align: left;
-    transition-duration: 0.15s;
-    transition-property: background-color;
-    transition-timing-function: linear;
-    margin-top: 0.6em;
-}
-
 header {
     padding: 40px;
     text-align: center;
     color: rgb(197, 202, 215);
-
 }
+
+/* ###############   UTILITIES    ############### */
+
+#high-score-body{
+    background: linear-gradient(0deg, rgb(35, 65, 94) 0%, rgb(35, 65, 94)63%);
+}
+
+.button-submit {
+   position: relative;
+   top: 1px;
+    font-size: 20px;
+    line-height: 5px;
+    width: 120px;
+    text-align: center;
+    transition-property: background-color, color;
+    margin-top: 15px;
+    margin-left: 10px;
+}
+
+.button-choices {
+    font-size: 1.2em;
+    line-height: 10px;
+    width: 230px;
+    padding-left: 10px;
+    text-align: left;
+}
+
+.button-highscore {
+    margin-top: 0px;
+    line-height: 5px;
+    font-size: 1.2em;
+}
+/* ###############    SITE WIDE    ############### */
 
 #view-high-score {
     color: var(--color);
@@ -101,14 +124,10 @@ header {
     top: 55px;
 }
 
-.rel-position {
-    position: relative;
-    top: 48px;
-}
-
-ul {
-    list-style-type: none;
-    padding: 0;
+.question {
+    color: rgb(197, 202, 215);
+    font-size: 30px;
+    width: 800px;
 }
 
 .choices {
@@ -120,10 +139,9 @@ ul {
     line-height: 1.5;
 }
 
-.question {
-    color: rgb(197, 202, 215);
-    font-size: 30px;
-    width: 800px;
+.rel-position {
+    position: relative;
+    top: 48px;
 }
 
 .div-initials {
@@ -132,14 +150,8 @@ ul {
     margin-bottom: 0px;
 }
 
-.highscore-position {
-    position: relative;
-    top: -40px;
-    font-size: 30px;
-}
-
 #input-initials {
-
+    text-transform: uppercase;
     background-color: whitesmoke;
     border-radius: 3px;
     border-width: 1px;
@@ -167,24 +179,6 @@ ul {
     margin: 0px 0px 10px 0px;
 }
 
-.button-submit {
-    background: var(--button_color);
-    border-radius: 8px;
-    color: #13293d;
-    cursor: pointer;
-    font-size: 20px;
-    letter-spacing: 0.21px;
-    line-height: 5px;
-    width: 120px;
-    padding: 13px 15px;
-    text-align: center;
-    transition-duration: 0.15s;
-    transition-property: background-color, color;
-    transition-timing-function: linear;
-    margin-top: 10px;
-    margin-left: 10px;
-}
-
 .div-highscores {
     margin-left: 270px;
     margin-top: 100px;
@@ -197,11 +191,12 @@ ul {
     margin-top: 0px;
 }
 
-.button-highscore {
-    margin-top: 0px;
-    line-height: 5px;
-    font-size: 1.2em;
+.highscore-position {
+    position: relative;
+    top: -40px;
+    font-size: 30px;
 }
+/* ###############   MEDIA QUERIES FOR RESPONSIVE LAYOUTS   ############### */
 
 @media screen and (max-width: 1183px) {
 
@@ -241,4 +236,5 @@ ul {
     #input-initials {
         width: 50%;
     }
+
 }
